# maach_et

./: Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs
src/agent/: mod.rs
src/chat/: chat_loop.rs  git.rs  mod.rs  prompt.rs  tool_checker.rs
src/llm_api/: chat_gpt.rs  mod.rs  ollama.rs
src/tools/: mod.rs  save.rs
