[package]
edition = "2021"
name = "mach_et"
version = "0.1.0"

[dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.0", features = ["full"]}
